syntax = "proto3";
import "media_type.proto";


option java_package = "com.memes.model.transport";

option java_multiple_files = true;

enum ReviewOutcome {
  PENDING = 0;
  APPROVED = 1;
  REJECTED = 2;
  FLAGGED = 3;
}


message LLMReviewResult {
  int64 mediaId = 1;
  string inputPrompt = 2;
  MediaType mediaType = 3;
  string mediaDescription = 4;
  ReviewOutcome outcome = 5;
  string failureReason = 6;
  int64 reviewTimestamp = 7;
  string reviewerModel = 8;
}
